--- a/css/styles.css
+++ b/css/styles.css
@@ -539,3 +539,80 @@ ol {
 .footer-text-container {
   margin-right: 120px;
 }
+
+/* SUBSCRIBE FORM */
+
+.footer-subscribe-form-container {
+  margin-left: 80px;
+}
+
+.footer-subscribe-form-description {
+  display: block;
+  color: #fff;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  margin-bottom: 16px;
+}
+
+.footer-subscribe-form-button-wrapper {
+  display: flex;
+  gap: 24px;
+}
+
+.footer-subscribe-form-input {
+  width: 264px;
+  height: 40px;
+  color: #fff;
+  background-color: transparent;
+  border-radius: 4px;
+  border: 1px solid #fff;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  padding: 8px 16px;
+  outline: 0px solid transparent;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-subscribe-form-input:focus {
+  border-color: #4d5ae5;
+}
+
+.footer-subscribe-form-input::placeholder {
+  color: #fff;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 2;
+  letter-spacing: 0.04em;
+}
+
+.footer-subscribe-button {
+  width: 165px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+  padding: 8px 24px;
+  color: #fff;
+  text-align: center;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  border: 0;
+  border-radius: 4px;
+  background: #4d5ae5;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-subscribe-button-icon {
+  fill: #fff;
+}
+
+.footer-subscribe-button:hover,
+.footer-subscribe-button:focus {
+  background-color: #404bbf;
+}
+
+/* / SUBSCRIBE FORM */
