--- a/css/styles.css
+++ b/css/styles.css
@@ -616,3 +616,36 @@ ol {
 }
 
 /* / SUBSCRIBE FORM */
+
+/* BACKDROP */
+
+.backdrop.is-open {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
+}
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 999;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(46, 47, 66, 0.4);
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 408px;
+  background-color: #fcfcfc;
+  border-radius: 4px;
+}
+
+/* / BACKDROP */
