--- a/css/styles.css
+++ b/css/styles.css
@@ -548,7 +548,7 @@ ol {
 
 .footer-subscribe-form-description {
   display: block;
-  color: #fff;
+  color: #ffffff;
   font-size: 16px;
   font-weight: 500;
   line-height: 1.5;
@@ -556,7 +556,7 @@ ol {
   margin-bottom: 16px;
 }
 
-.footer-subscribe-form-button-wrapper {
+.footer-subscribe-form {
   display: flex;
   gap: 24px;
 }
@@ -565,11 +565,15 @@ ol {
   width: 264px;
   height: 40px;
   color: #fff;
+  font-size: 12px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
   background-color: transparent;
   border-radius: 4px;
-  border: 1px solid #fff;
+  border: 1px solid #ffffff;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-  padding: 8px 16px;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  padding-left: 16px;
   outline: 0px solid transparent;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -579,35 +583,31 @@ ol {
 }
 
 .footer-subscribe-form-input::placeholder {
-  color: #fff;
-  font-size: 12px;
-  font-weight: 400;
-  line-height: 2;
-  letter-spacing: 0.04em;
+  color: #ffffff;
 }
 
 .footer-subscribe-button {
-  width: 165px;
+  min-width: 165px;
   height: 40px;
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 16px;
   padding: 8px 24px;
-  color: #fff;
+  color: #ffffff;
   text-align: center;
   font-size: 16px;
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.04em;
-  border: 0;
+  border: none;
   border-radius: 4px;
-  background: #4d5ae5;
+  background-color: #4d5ae5;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-subscribe-button-icon {
-  fill: #fff;
+  fill: #ffffff;
+  margin-left: 16px;
 }
 
 .footer-subscribe-button:hover,
@@ -636,6 +636,8 @@ ol {
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal {
@@ -644,11 +646,16 @@ ol {
   left: 50%;
   transform: translate(-50%, -50%);
   width: 408px;
+  min-height: 584px;
   background-color: #fcfcfc;
   border-radius: 4px;
+  padding-top: 72px;
   padding-right: 24px;
   padding-bottom: 24px;
   padding-left: 24px;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* / BACKDROP */
@@ -656,6 +663,10 @@ ol {
 /* MODAL */
 
 .modal-close-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
   position: absolute;
   top: 24px;
   right: 24px;
@@ -666,15 +677,18 @@ ol {
   border-radius: 50%;
   fill: #2e2f42;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-close-button:hover,
 .modal-close-button:focus {
   background-color: #404bbf;
   fill: #ffffff;
-  border-color: #404bbf;
+  border: none;
+}
+
+.modal-close-button-icon {
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-description {
@@ -684,7 +698,6 @@ ol {
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  padding-top: 72px;
   margin-bottom: 16px;
 }
 
@@ -734,23 +747,20 @@ ol {
   fill: #4d5ae5;
 }
 
-.modal-form-textarea-wrapper {
-  margin-bottom: 16px;
-}
-
 .modal-form-textarea-label {
   display: block;
   color: #8e8f99;
-  font-size: 12px;
-  font-weight: 400;
-  line-height: 1.17;
-  letter-spacing: 0.04em;
   margin-bottom: 4px;
 }
 
 .modal-form-textarea {
   width: 100%;
   height: 120px;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: rgba(46, 47, 66, 0.4);
   background-color: transparent;
   border-radius: 4px;
   border: 1px solid rgba(46, 47, 66, 0.4);
@@ -786,17 +796,20 @@ ol {
   height: 16px;
   border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 2px;
+  fill: transparent;
   margin-right: 8px;
   cursor: pointer;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-form-checkbox:checked
   + .modal-form-checkbox-description
   > .modal-form-own-checkbox {
   background-color: #404bbf;
-  border-color: #404bbf;
+  fill: #f4f4fd;
+  border: none;
 }
 
 .modal-form-checkbox:focus
@@ -837,7 +850,7 @@ ol {
 
 .modal-form-button {
   display: block;
-  width: 169px;
+  min-width: 169px;
   height: 56px;
   color: #fff;
   text-align: center;
