--- a/css/styles.css
+++ b/css/styles.css
@@ -751,7 +751,7 @@ ol {
   margin-bottom: 16px;
 }
 
-.modal-form-textarea-label {
+/* .modal-form-textarea-label {
   display: block;
   color: #8e8f99;
   font-size: 12px;
@@ -759,7 +759,7 @@ ol {
   line-height: 1.17;
   letter-spacing: 0.04em;
   margin-bottom: 4px;
-}
+} */
 
 .modal-form-textarea {
   width: 100%;
